--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" type="text/css" href="_site/assets/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/main.css">
     {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
 
