lots of updates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
             {% assign page_paths = site.header_pages | default:default_paths %}
             <nav class="navbar navbar-light navbar-expand-md ">
                 <div class="container-fluid p-0">
-                    <a class="navbar-brand" href="/" style="align-items: center;">
+                    <a class="navbar-brand" href="/">
 
                         <h1> {{ site.title |escape}} </h1>
                     </a>
@@ -27,13 +27,13 @@
 
                         <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                             <li class="nav-item">
-                                <a class='nav-link' href="/projects">
-                                    Projects
+                                <a class='nav-link' href="/tie">
+                                    TIE
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class='nav-link' href="/tie">
-                                    TIE
+                                <a class='nav-link' href="/documents/KelleClark.pdf">
+                                    Resume
                                 </a>
                             </li>
                         </ul>
