--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,7 +1,3 @@
-
-
-
-
 @import
   "bootstrap/bootstrap",
   "bootstrap/base",
@@ -14,14 +10,80 @@
 @import "header_element";
 @import "index_card";
 
-
+// custom for this site
 
 .navbar-light .navbar-nav .nav-link {
   color: $conifer;
 
   &:hover {
-    color: $hippie-blue;
+    color: #0062FF ;
   }
+}
+
+.navbar-brand h1 {
+  align-items: center;
+
+  &:hover {
+    color: #0062FF ;
+  }
+}
+
+// Style anchor elements.
+
+$link-color:                              $conifer !default;
+$link-decoration:                         underline !default;
+$link-shade-percentage:                   20% !default;
+$link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
+$link-hover-decoration:                   null !default;
+
+a-href {
+  color: $conifer;
+  text-decoration: $link-decoration;
+
+  &:hover {
+    color: $link-hover-color;
+    text-decoration: $link-hover-decoration;
+  }
+}
+
+a {
+  color: $link-color;
+  text-decoration: $link-decoration;
+
+  &:hover {
+    color: $link-hover-color;
+    text-decoration: $link-hover-decoration;
+  }
+}
+
+// And undo these styles for placeholder links/named anchors (without href).
+// It would be more straightforward to just use a[href] in previous block, but that
+// causes specificity issues in many other styles that are too complex to fix.
+// See https://github.com/twbs/bootstrap/issues/19402
+
+a-href  {
+  color: $conifer;
+  &:hover {
+    color: #0062FF ;
+    text-decoration: none;
+  }
+}
+
+#top_container {
+  /* The image used */
+  background-image: url("../images/dragonfly_xor_yellow2.png");
+
+  /* Full height */
+  height: 100%; 
+  width: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  text-align: right;
+   color: black;
 }
 
 
