--- a/_sass/_index_card.scss
+++ b/_sass/_index_card.scss
@@ -7,8 +7,9 @@
     min-width: 0; // See https://github.com/twbs/bootstrap/pull/22740#issuecomment-305868106
     height: $card-height;
     word-wrap: break-word;
-    background-color: black;
+    background-color: white;
     background-clip: border-box;
+    text-align: center;
     border: $card-border-width dotted $conifer;
     @include border-radius($card-border-radius);
     @include box-shadow($card-box-shadow);
