still working on elements style

--- a/_includes/welcome_row.html
+++ b/_includes/welcome_row.html
@@ -7,8 +7,8 @@
             and share my ideas with others.
         </p>
         <p style="text-align: left; padding-left: 10px"> Navigate to either my
-            <a href="/tie">TIE</a> (Today I Explored) blog-like page
-            or <a href="/projects">Projects</a> page or keep scrolling to see my featured Github projects.
+            <a href="/tie">TIE</a> (Today I Explored) blog-like page or keep
+            scrolling to see featured Github projects.
         </p>
     </div>
     <hr style="margin-bottom: 30px; margin-top: 40px; color: rgb(108, 224, 240)">
