--- a/_includes/contact_row.html
+++ b/_includes/contact_row.html
@@ -9,9 +9,9 @@
             <p> or find me on LinkedIn and Twitter:
             <div style="display:inline; margin-bottom: 15px;">
 
-                <a href="https://twitter.com/{{site.twitter_username}}" target="_blank"><img
-                        src="/assets/images/social/tw.png" width="47px" hspace="18" vspace="0"></a>
-                <a href="https://www.linkedin/{{site.linkedin_username}}" target="_blank"><img
+                <a href="https://twitter.com/KClarkCode" target="_blank"><img src="/assets/images/social/tw.png"
+                        width="47px" hspace="18" vspace="0"></a>
+                <a href="https://www.linkedin.com/in/kelle-clark-b31731176/" target="_blank"><img
                         src="/assets/images/social/li.png" width="47px" hspace="18" vspace="0"></a>
             </div>
             </p>
