--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -29,3 +29,10 @@ layout: default
         {% endfor %}
     </ul>
 </div>
+
+<div class="container-fluid">
+    <div class="row">
+
+        {% include slide_show.html %}
+    </div>
+</div>
