--- a/_includes/contact_row.html
+++ b/_includes/contact_row.html
@@ -1,6 +1,5 @@
 <div class="container-fluid">
-    <div class="text-middle container-fluid card indexcard"
-        style="background-color: rgb(247, 247, 70); margin-top: 30px;">
+    <div class="text-middle container-fluid card contact_card">
         <div class="row" style="text-align:left">
             <p>Your feedback and suggestions are welcome for topics for me to look into. Email me at
                 <a class="u-email" href="mailto:clarkke20@students.ecu.edu"> clarkke20@students.ecu.edu </a>
