--- a/_includes/welcome_row.html
+++ b/_includes/welcome_row.html
@@ -1,15 +1,19 @@
 <div class="container-fluid">
-    <div class="text-middle container-fluid card indexcard" style="background-color:#b5e853; margin-top: 30px;">
-        <h3 style="text-align: center;">Welcome!</h3>
-        <p style="text-align: left; padding-left: 10px"> My name is Kelle Clark, and I am a Mathematics and
-            Computer Science
-            enthusiast. This site allows me to journal my exploration into these fields, catelog great resources
-            and share my ideas with others.
-        </p>
-        <p style="text-align: left; padding-left: 10px"> Navigate to either my
-            <a href="/tie">TIE</a> (Today I Explored) blog-like page or keep
-            scrolling to see featured Github projects.
-        </p>
+    <div class="text-middle container-fluid card welcome_card">
+        <h2 style="text-align: center; color:#b5e853;">Welcome!</h2>
+        <div style="text-indent:5%;">
+            <p> My name is Kelle Clark, and I am a Mathematics and
+                Computer Science
+                enthusiast. This site allows me to journal my exploration into these fields, catelog great resources
+                and share my ideas with others.
+            </p>
+            <p> Navigate to either my <a href="/tie">TIE</a> (Today I Explored) blog-like page or keep
+                scrolling to see featured Github projects.
+            </p>
+            <br>
+            <br>
+            <br>
+        </div>
     </div>
-    <hr style="margin-bottom: 30px; margin-top: 40px; color: rgb(108, 224, 240)">
+
 </div>
