--- a/_sass/_header_element.scss
+++ b/_sass/_header_element.scss
@@ -1,7 +1,7 @@
 
 @import "default_colors";
 
-$header: $conifer;
+
 $container-max-width: 1000px;
 
 @mixin media-max-width($max-width) {
@@ -10,10 +10,11 @@ $container-max-width: 1000px;
   }
 }
 
+
 header {
     background: rgba(0, 0, 0, 0.1);
     width: 100%;
-    border-bottom: 1px dashed $conifer; //header;
+    // border-bottom: 1px dashed #b5e853; //header;
     padding: 20px 0;
     margin: 0 0 40px 0;
   }
@@ -23,7 +24,8 @@ header {
     line-height: 1.5;
     margin: 0 0 0 -40px;
     font-weight: bold;
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+    // font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+    font-family: Inconsolata, monospace;
     color: $conifer;//$header;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
                  0 0 5px rgba(181, 232, 83, 0.1),
@@ -36,19 +38,25 @@ header {
   }
   
   
-  header h1:before {
+
+header h1:before {
     content: ">>$";
-    font-size: 24px;
+    font-size: 30px;
   }
   
-  header h2 {
+header h2 {
     font-size: 18px;
     font-weight: 300;
     color:$conifer;
-  }
+}
 
-  header nav-link {
+header nav-link {
     color: $conifer;
     font-size: 16px;
-  }
-  
+}
+
+
+.current {
+    color: $hippie-blue;
+    font-size: 16px;
+}
