three different styles of pages

--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div id="bannertext">
-        <div class="text-middle container-fluid card announce_card">
+        <div class="text-middle container-fluid announce_div">
             <div style="text-indent:5%;">
                 <p id=" bannertext">
                     >>$ Checkout my <a style="color#b5e853;" href='/tie/'>TIE section</a> (Today I Explored):<br>
