--- a/_includes/welcome_row.html
+++ b/_includes/welcome_row.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="text-middle container-fluid card welcome_card">
+    <div class="text-middle container-fluid  welcome_div">
         <h2 style="text-align: center; color:#b5e853;">Welcome!</h2>
         <div style="text-indent:5%;">
             <p> My name is Kelle Clark, and I am a Mathematics and
@@ -7,8 +7,8 @@
                 enthusiast. This site allows me to journal my exploration into these fields, catelog great resources
                 and share my ideas with others.
             </p>
-            <p> Navigate to either my <a href="/tie">TIE</a> (Today I Explored) blog-like page or keep
-                scrolling to see featured Github projects.
+            <p> Navigate to either my <a href="/tie">TIE</a> (Today I Explored) blog-like page or visit the
+                Portfolio page to view samples of my work.
             </p>
             <br>
             <br>
