--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,23 +4,209 @@
 
 </html>
 
-{% include head.html %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ page.title }} - {{ site.title }}</title>
+    <!-- <link rel="stylesheet" type="text/css" href="{{ " /assets/styles/main.css" | relative_url }}"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    {% if jekyll.environment == 'production' and site.google_analytics %}
+    {% include google-analytics.html %}
 
+    {% endif %}
+    <style>
+        header {
+            background-color: navajowhite;
+            width: 100%;
+            padding: 20px 0;
+            margin: 0 0 0px 0;
+        }
+
+        header h1:before {
+            content: "  ";
+            font-size: 30px;
+        }
+
+        header h2 {
+            font-size: 18px;
+            font-weight: 300;
+            color: black;
+        }
+
+        header nav-link {
+            color: black;
+            font-size: 16px;
+        }
+
+        header h1 {
+            font-size: 30px;
+            line-height: 1.5;
+            margin: 0 0 0 -40px;
+            font-weight: bold;
+            font-family: 'Arial Narrow', sans-serif;
+            color: black;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
+                0 0 5px rgba(181, 232, 83, 0.1),
+                0 0 10px rgba(181, 232, 83, 0.1);
+            letter-spacing: -1px;
+            -webkit-font-smoothing: antialiased;
+
+            @include media-max-width($container-max-width) {
+                margin-left: 0;
+            }
+        }
+
+
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: whitesmoke;
+            /* background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 120%); */
+            height: 100vh;
+            color: black;
+            font-size: 24px;
+            line-height: 1.5;
+            font-family: 'Arial Narrow', sans-serif;
+            /* font-family: Inconsolata, monospace;
+            font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace; */
+        }
+
+        .navbar-dark .navbar-nav .nav-link {
+            color: black;
+
+        }
+
+
+        .navbar-brand h1 {
+            align-items: center;
+        }
+
+
+        a-href {
+            color: white;
+        }
+
+        a-href-hover {
+            color: darkblue;
+        }
+
+        a {
+            color: rebeccapurple;
+        }
+
+        a-hover {
+            color: chocolate;
+        }
+
+        .sidenav {
+            height: 100%;
+            /* 100% Full-height */
+            width: 12%;
+            /* 0 width - change this with JavaScript */
+            position: fixed;
+            /* Stay in place */
+            z-index: 1;
+            /* Stay on top */
+            top: 0;
+            /* Stay at the top */
+            left: 0;
+            background-color: #111;
+            /* Black*/
+            overflow-x: hidden;
+            /* Disable horizontal scroll */
+            padding-top: 60px;
+            /* Place content 60px from the top */
+            transition: 0.5s;
+            /* 0.5 second transition effect to slide in the sidenav */
+        }
+
+        /* The navigation menu links */
+        .sidenav a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+        }
+
+        /* When you mouse over the navigation links, change their color */
+        .sidenav a:hover {
+            color: darkblue;
+        }
+
+        .sidenav .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
+
+        #main {
+            transition: margin-left .5s;
+            padding: 100px;
+        }
+
+        .home {
+            margin: auto;
+            width: 60%;
+
+            padding: 10px;
+        }
+
+        /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+        @media screen and (max-height: 450px) {
+            .sidenav {
+                padding-top: 15px;
+            }
+
+            .sidenav a {
+                font-size: 18px;
+            }
+        }
+    </style>
+</head>
 
 <body>
-    {% include header.html %}
 
-    <main class="page-content">
-        <div class="wrapper">
-            {{ content }}
+    <div class="sidenav" id="mySideNav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="/">Home</a>
+        <a href="/projects/">Projects</a>
+        <a href="/documents/KelleClark.pdf">Resume</a>
+    </div>
+    <span onclick="openNav()">open
+
+        <div id="main" style="background-color:whitesmoke;" style="text-align: center;">
+
+            <div>
+
+                {{ content }}
+            </div>
+
+            <div class="container-fluid" style="background-color:whitesmoke;">
+                {% include footer.html %}
+            </div>
+
         </div>
-    </main>
+    </span>
 
-    {% include footer.html %}
+
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
 <script src="/assets/js/bootstrap.js"></script>
+<script>
+    // using javascript to change styling of sidenav
+    function openNav() {
+        document.getElementById("mySideNav").style.width = "20%";
+    }
+
+    function closeNav() {
+        document.getElementById("mySideNav").style.width = "0%";
+    }
+</script>
 
 </html>
