--- a/_sass/_header_element.scss
+++ b/_sass/_header_element.scss
@@ -25,7 +25,8 @@ header {
     margin: 0 0 0 -40px;
     font-weight: bold;
     // font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-    font-family: Inconsolata, monospace;
+    //font-family: Inconsolata, monospace;
+    font-family: 'Arial Narrow', sans-serif;
     color: $conifer;//$header;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
                  0 0 5px rgba(181, 232, 83, 0.1),
