--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,4 +1,4 @@
-.none{height:0px}/*!
+none{height:0px}/*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
