--- a/_includes/welcome_row.html
+++ b/_includes/welcome_row.html
@@ -8,7 +8,7 @@
                 and share my ideas with others.
             </p>
             <p> Navigate to either my <a href="/tie">TIE</a> (Today I Explored) blog-like page or visit the
-                Portfolio page to view samples of my work.
+                Projects page to view samples of my work.
             </p>
             <br>
             <br>
