--- a/_includes/slide_show.html
+++ b/_includes/slide_show.html
@@ -1,14 +1,15 @@
 <div>
     <div id="typesofresources" class="carousel carousel-dark slide" data-bs-ride="carousel"
-        style="background-color: black; border-radius: 10px;">
+        style="background-color: black; border-radius: 10px; color: white">
         <div class="display-6 mt-4 py-0 px-3 ">
-            <h3 style=" font-size: 0.8em; font-weight: 500; color: white; text-align: left;">Interesting Videos
-                and Resources </h3>
+            <h3 style=" font-size: 0.8em; font-weight: 500; color: white; text-align: left;">My Demo Videos & Minitalks
+            </h3>
         </div>
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#typesofresources" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#typesofresources" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#typesofresources" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -20,7 +21,7 @@
                             class="d-block mx-auto mt-4" style="max-height: 400px;" alt="...">
                     </div>
                     <div class="col-md-4 p-3">
-                        <div style="width: 95%; height: 440px;">
+                        <div style="width: 95%; height: 100%;">
                             <h2 style="margin-bottom: 10px; font-weight: 700; padding-top: 20px;">Natural Language
                                 Processing</h2>
                             <h5 style="  text-align: justify; text-justify: inter-word;">Using a Python Interactive
@@ -34,21 +35,44 @@
                     </div>
                 </div>
             </div>
+
             <div class="carousel-item">
                 <div class="row mb-4">
-                    <div class="col-md-6 p-3" style="min-height: 300px;">
-                        <iframe width="80%" height="80%"
-                            src="https://www.youtube.com/embed/{{site.data.home.zero.iframe}}"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen style="float: left;""></iframe>
+                    <div class="col-md-2 p-3">
+
                     </div>
-                    <div class=" col-md-6 p-3">
-                            <div>
-                                <h4 style="margin-bottom: 10px; font-weight: 500; 
-                                text-align: left">{{site.data.home.zero.t1 }}</h4>
-                                <h5> {{ site.data.home.zero.t2 }} </h5>
-                            </div>
+                    <div class="col-md-4 p-3" style="min-height: 300px;">
+                        <iframe src="{{site.data.home.one.iframe}}" width=80% height=80% allow="autoplay"></iframe>
+                    </div>
+                    <div class=" col-md-4 p-3">
+                        <div>
+                            <h4 style="margin-bottom: 10px; font-weight: 500; 
+                                text-align: left">{{site.data.home.one.t1 }}</h4>
+                            <h5> {{ site.data.home.one.t2 }} </h5>
+                        </div>
+                    </div>
+                    <div class="col-md-2 p-3">
+
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="row mb-4">
+                    <div class="col-md-2 p-3">
+
+                    </div>
+                    <div class="col-md-4 p-3" style="min-height: 300px;">
+                        <iframe src="{{site.data.home.two.iframe}}" width=80% height=80% allow="autoplay"></iframe>
+                    </div>
+                    <div class=" col-md-4 p-3">
+                        <div>
+                            <h4 style="margin-bottom: 10px; font-weight: 500; 
+                                text-align: left">{{site.data.home.one.t1 }}</h4>
+                            <h5> {{ site.data.home.one.t2 }} </h5>
+                        </div>
+                    </div>
+                    <div class="col-md-2 p-3">
+
                     </div>
                 </div>
             </div>
