--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default1
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
@@ -11,7 +11,7 @@ layout: default
                 {{ page.date | date: date_format }}
             </time>
             {% if page.author %}
-            • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card"
+            <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card"
                     itemprop="name">{{ page.author }}</span></span>
             {% endif %}
         </p>
