--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 
-<html lang="">
+<html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
 </html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NLP: Creating Language Models using ngrams - Kelle Clark</title>
-    <link rel="stylesheet" type="text/css" href=" /assets/styles/main.css">
+    <title>{{ page.title }} - {{ site.title }}</title>
+    <link rel="stylesheet" type="text/css" href="{{ " /assets/styles/main.css" | relative_url }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    {% if jekyll.environment == 'production' and site.google_analytics %}
+    {% include google-analytics.html %}
+
+    {% endif %}
 
     <style>
         header {
@@ -111,96 +114,17 @@
             <br>
         </div>
         <div class="row">
-            <style media="screen">
-    img {
-        position: relative;
-        top: -4.3px;
-    }
-</style>
-<header role="banner">
-    <div>
-        <div class="wrapper" style="padding: 0px;">
-            
-            
-            <nav class="navbar navbar-dark navbar-expand-md ">
-                <a class="navbar-brand mr-auto" href="/">
-
-                    <h1> Kelle Clark </h1>
-                </a>
-
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    
-                    <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-                        
-                        <li class="nav-item">
-                            <a  class="nav-link" 
-                                href="/tie/">
-                                TIE
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a  class="nav-link" 
-                                href="/documents/KelleClark.pdf">
-                                Resume
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a  class="nav-link" 
-                                href="/projects/">
-                                Projects
-                            </a>
-                        </li>
-                        
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </div>
-</header>
+            {% include header.html %}
         </div>
     </div>
 
     <div id="main" style="background-color:whitesmoke;" style="text-align: center;">
         <div>
-            <div>
-    <h4>Building Language Model with ngrams in Python</h4>
-    <p> Under Construction</p>
-</div>
+            {{ content }}
         </div>
 
         <div class="container-fluid" style="background-color:whitesmoke;">
-            <footer class="site-footer h-card">
-    <data class="u-url" href="/"></data>
-    <div class="wrapper p-0">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <div class="social-links">
-                        
-
-<ul class="social-media-list">
-    <div style="display:inline;">
-        <a href="https://twitter.com/KClarkCode" target="_blank"><img src="/assets/images/social/tw.png" width="30px"
-                hspace="15"></a>
-        <a href="https://www.linkedin.com/in/kelle-clark-b31731176/" target="_blank"><img
-                src="/assets/images/social/li.png" width="30px" hspace="15"></a>
-    </div>
-</ul>
-                    </div>
-                    
-                </div>
-
-            </div>
-        </div>
-    </div>
-</footer>
+            {% include footer.html %}
         </div>
 
     </div>
