--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -18,11 +18,11 @@ layout: default1
     {% for item in site.data.projects %}
     <div class="card">
         <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
-        <div class="card-header" style="background-color:peru;">
+        <div class="card-header" style="background-color:#284253;">
             <br>
         </div>
         <div class="card-body">
-            <h5 class="card-title" style="color:darkblue;">{{item.title}}</h5>
+            <h5 class="card-title" style="color:#284253;">{{item.title}}</h5>
             <p class="card-text">{{item.description}}</p>
             <a href="{{ item.link}}" class="btn btn-dark">View Project</a>
         </div>
