getting close to final look

--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div id="bannertext">
-        <div class="text-middle container-fluid announce_div">
+        <div class="text-middle container-fluid ">
             <div style="text-indent:5%;">
                 <p id=" bannertext">
-                    >>$ Checkout my <a style="color#b5e853;" href='/tie/'>TIE section</a> (Today I Explored):<br>
+                    Checkout my <a href='/tie/'>TIE section</a> (Today I Explored):<br>
                     Posts outlining the topics in Computer Science and/or Mathematics that I have focused on.
                 </p>
             </div>
