--- a/_includes/contact_row.html
+++ b/_includes/contact_row.html
@@ -1,19 +1,21 @@
 <div class="container-fluid">
-    <div class="text-middle container-fluid  contact_div">
-        <div class="row" style="text-align:left">
-            <p>Your feedback and suggestions are welcome for topics for me to look into. Email me at
-                <a class="u-email" href="mailto:clarkke20@students.ecu.edu"> clarkke20@students.ecu.edu </a>
-            </p>
-            <br>
-            <p> or find me on LinkedIn and Twitter:
-            <div style="display:inline; margin-bottom: 15px;">
+    <div class="text-middle container-fluid  ">
 
-                <a href="https://twitter.com/KClarkCode" target="_blank"><img src="/assets/images/social/tw.png"
-                        width="47px" hspace="18" vspace="0"></a>
-                <a href="https://www.linkedin.com/in/kelle-clark-b31731176/" target="_blank"><img
-                        src="/assets/images/social/li.png" width="47px" hspace="18" vspace="0"></a>
-            </div>
-            </p>
+        <h2 style="text-align: center; color:#284253;">Contact Me</h2>
+
+        <p>Your feedback and suggestions for topics for me to look into are very welcome. Email me at
+            <a class="u-email" href="mailto:clarkke20@students.ecu.edu"> clarkke20@students.ecu.edu </a>
+        </p>
+        <br>
+        <p> or find me on LinkedIn and Twitter:
+        <div style="display:inline; margin-bottom: 15px;">
+
+            <a href="https://twitter.com/KClarkCode" target="_blank"><img src="/assets/images/social/tw.png"
+                    width="47px" hspace="18" vspace="0"></a>
+            <a href="https://www.linkedin.com/in/kelle-clark-b31731176/" target="_blank"><img
+                    src="/assets/images/social/li.png" width="47px" hspace="18" vspace="0"></a>
         </div>
+        </p>
+
     </div>
 </div>
