--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         top: -4.3px;
     }
 </style>
-<header role="banner">
+<header>
     <div>
         <div class="wrapper" style="padding: 0px;">
             {% assign default_paths = site.pages | map: "path" %}
