--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ page.title }} - {{ site.title }}</title>
-<link rel="stylesheet" type="text/css" href="{{ "assets/styles/main.css" | relative_url }}">
+<link rel="stylesheet" type="text/css" href="{{ " /assets/styles/main.css" | relative_url }}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {% if jekyll.environment == 'production' and site.google_analytics %}
 {% include google-analytics.html %}
