--- a/_includes/welcome_row.html
+++ b/_includes/welcome_row.html
@@ -1,14 +1,18 @@
 <div class="container-fluid">
-    <div class="text-middle container-fluid  welcome_div">
-        <h2 style="text-align: center; color:#b5e853;">Welcome!</h2>
+    <div class="text-middle container-fluid  ">
+        <h2 style="text-align: center; color:#284253;">Welcome!</h2>
         <div style="text-indent:5%;">
             <p> My name is Kelle Clark, and I am a Mathematics and
-                Computer Science
-                enthusiast. This site allows me to journal my exploration into these fields, catelog great resources
+                Computer Science enthusiast. I honestly enjoy
+                researching every concept that I come across.
+            </p>
+            <p>This site allows me to journal my exploration into these fields, catalog great resources
                 and share my ideas with others.
             </p>
-            <p> Navigate to either my <a href="/tie">TIE</a> (Today I Explored) blog-like page or visit the
-                Projects page to view samples of my work.
+            <p> Please visit my <a href="/tie">TIE</a> (Today I Explored) blog-like page, checkout my
+                <a href="/projects/">Projects</a> page to view samples of my work or view my <a
+                    href="/documents/KelleClark.pdf">resume</a>. To contact me, click the "About Me" icon in the
+                upper left corner of this card.
             </p>
             <br>
             <br>
