--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,7 +103,7 @@
 
 
         #sidebar {
-            min-width: 150px;
+            min-width: 250px;
             position: fixed;
             left: 0;
             height: 100vh;
@@ -182,20 +182,24 @@
                 </button>
 
             </div>
-            <div class="container-fluid" style="background-color: #fff0d6; width:100%; height:500px;">
-                <img style="width: 100%; height:100%; object-fit: cover; " src="../assets/images/lightbulb2.png">
-            </div>
+            <div class="container-fluid" style="background-color: #fff0d6; width:100%; height:400px;">
+                <img style="width: 100%; max-height:100%; object-fit: cover; " src="../assets/images/catapiler.png"
+                    </div>
 
         </nav>
 
-        <div>
-            {{ content }}
-        </div>
+        <div class="container-fluid" style="text-align:center;">
+            <div style="background-color: blanchedalmond;">{{content}}</div>
+            <!-- <div class="row">
+                <div class="col-md-3" style="background-color:#fff0d6;"></div>
+                <div class="col-md-6" style="background-color:whitesmoke;">{{ content }}</div>
+                <div class="col-md-3" style="background-color:#fff0d6;"></div>
+            </div> -->
 
-        <div>
-            {% include footer.html %}
+            <div>
+                {% include footer.html %}
+            </div>
         </div>
-    </div>
 
 
 
