--- a/_layouts/default1.html
+++ b/_layouts/default1.html
@@ -76,7 +76,8 @@
         }
 
         a-hover {
-            color: #465368;
+            color: #284253;
+            ;
         }
 
         a-href {
@@ -92,7 +93,7 @@
 <body>
     {% include header.html %}
     <div class="container-fluid" style="background-color: #fff0d6; width:100%; height:300px;">
-        <img style="object-fit: cover; width:100%; height:100%" src="../assets/images/boardwalk_birds.jpg">
+        <img style="object-fit: cover; width:100%; height:100%" src="../assets/images/Alan_sky.png">
     </div>
 
     </div>
