--- a/_includes/slide_show.html
+++ b/_includes/slide_show.html
@@ -67,8 +67,8 @@
                     <div class=" col-md-4 p-3">
                         <div>
                             <h4 style="margin-bottom: 10px; font-weight: 500; 
-                                text-align: left">{{site.data.home.one.t1 }}</h4>
-                            <h5> {{ site.data.home.one.t2 }} </h5>
+                                text-align: left">{{site.data.home.two.t1 }}</h4>
+                            <h5> {{ site.data.home.two.t2 }} </h5>
                         </div>
                     </div>
                     <div class="col-md-2 p-3">
